# zorsh-gen-rs

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: technical.md
examples/simple_conversion/: Cargo.toml  README.md  main.rs
examples/simple_conversion/input/: models.rs
examples/simple_conversion/output/: models.ts
src/: code_generator.rs  converter.rs  dependency_resolver.rs  lib.rs  main.rs  source_loader.rs  type_parser.rs
tests/integration_tests/: basic_types.rs  complex_types.rs  config_tests.rs  mod.rs  module_structure.rs  type_aliases.rs
tests/integration_tests/snapshots/: integration__basic_types__basic_enums.snap  integration__basic_types__primitive_types.snap  integration__basic_types__string_types.snap  integration__basic_types__unit_structs.snap  integration__complex_types__collections.snap  integration__complex_types__complex_enums.snap  integration__complex_types__nested_structs.snap  integration__complex_types__optional_and_nested_types.snap  integration__type_aliases__array_aliases.snap  integration__type_aliases__complex_nested_aliases.snap  integration__type_aliases__enum_with_type_aliases.snap  integration__type_aliases__nested_type_aliases.snap  integration__type_aliases__primitive_aliases.snap
wix/: main.wxs
