[package]
name = "zorsh-gen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
petgraph = "0.7.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
syn = { version = "2.0.98", features = ["full", "visit"] }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.17.1"
