[package]
name = "zorsh-gen-rs"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/r-near/zorsh-gen-rs"
license = "MIT"
authors = ["r-near <r-near@zorsh.dev>"]
homepage = "https://zorsh.dev"
description = "Zorsh generator for Rust"

[[test]]
name = "integration"
path = "tests/integration_tests/mod.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
petgraph = "0.7.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
syn = { version = "2.0.98", features = ["full", "visit"] }
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml"] }
pretty_assertions = "1.4.1"
tempfile = "3.17.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
